--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -1,2 +1,15 @@
 
 @import '~bootstrap/scss/bootstrap';
+
+.app-title {
+  text-transform: uppercase;
+}
+
+.sticky-footer {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  height: 60px;
+  line-height: 60px;
+  background-color: #f5f5f5;
+}
