--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -1,15 +1,30 @@
 
 @import '~bootstrap/scss/bootstrap';
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+}
+
 .app-title {
   text-transform: uppercase;
 }
 
 .sticky-footer {
-  display: block;
-  position: absolute;
-  bottom: 0;
-  height: 60px;
-  line-height: 60px;
-  background-color: #f5f5f5;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+
+    .container > div {
+        padding-left: 15px;
+        padding-right: 15px;
+        background-color: $gray-200;
+    }
 }
