--- a/templates/index/dashboard.html.twig
+++ b/templates/index/dashboard.html.twig
@@ -1,4 +1,4 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <h1>Welcome</h1>
+    <h1>{% trans from "messages" %}Welcome{% endtrans %}</h1>
 {% endblock %}
