--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,16 +3,16 @@
 {% block body %}
 
   {% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    <div>{{ error.messageKey|trans(error.messageData, 'messages') }}</div>
   {% endif %}
 
   <form action="{{ path('login') }}" method="post">
-    <label for="username">Username:</label>
+    <label for="username">{% trans %}Username{% endtrans %}:</label>
     <input type="text" id="username" name="_username" value="{{ last_username }}" />
 
-    <label for="password">Password:</label>
+    <label for="password">{% trans %}Password{% endtrans %}:</label>
     <input type="password" id="password" name="_password" />
 
-    <button type="submit">Login</button>
+    <button class="btn" type="submit">Login</button>
   </form>
 {% endblock %}
