--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,11 +10,17 @@
     </head>
     <body>
         <div class="container">
-            <nav class="navbar navbar-dark bg-dark">
+            <nav class="navbar navbar-expand-md navbar-dark bg-dark">
                 <a class="navbar-brand app-title" href="/">Tournament Planner</a>
-                <div class="" id="navbarNav">
-
-                </div>
+                {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link {% if app.request.attributes.get('_route') == 'dashboard' %}active{% endif %}" href="{{ path('dashboard') }}">Dashboard</a></li>
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <li class="nav-item"><a class="nav-link {% if app.request.attributes.get('_route') matches '@admin_.*@' %}active{% endif %}" href="{{ path('admin_index') }}">{% trans from "messages" %}Admin Area{% endtrans %}</a></li>
+                        {% endif %}
+                        <li class="nav-item"><a class="nav-link" href="{{ path('logout') }}">Logout</a></li>
+                    </ul>
+                {% endif %}
             </nav>
             {% block body %}{% endblock %}
         </div>
