--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,18 +1,16 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <form action="{{ path('login') }}" class="form-signin border border-dark rounded" method="post">
+        <h2>Login</h2>
+        <label class="src-only" for="username">{% trans %}Username{% endtrans %}:</label>
+        <input type="text" class="form-control form-control-lg" required id="username" name="_username" placeholder="{% trans %}Username{% endtrans %}" value="{{ last_username }}" />
 
-  {% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'messages') }}</div>
-  {% endif %}
-
-  <form action="{{ path('login') }}" method="post">
-    <label for="username">{% trans %}Username{% endtrans %}:</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" />
-
-    <label for="password">{% trans %}Password{% endtrans %}:</label>
-    <input type="password" id="password" name="_password" />
-
-    <button class="btn" type="submit">Login</button>
+        <label class="src-only" for="password">{% trans %}Password{% endtrans %}:</label>
+        <input type="password" class="form-control form-control-lg" required id="password" name="_password" placeholder="{% trans %}Password{% endtrans %}" />
+        {% if error %}
+            <div class="feedback">{{ error.messageKey|trans(error.messageData, 'messages') }}</div>
+        {% endif %}
+        <button class="btn btn-primary btn-block" type="submit">Login</button>
   </form>
 {% endblock %}
