change tournament create form

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -34,6 +34,12 @@ body {
   color: red;
 }
 
+form {
+    button[type=submit] {
+        margin-top: 15px;
+    }
+}
+
 .form-signin {
     background-color: $gray-100;
     max-width: 360px;
