--- a/templates/registration/public-team-register.html.twig
+++ b/templates/registration/public-team-register.html.twig
@@ -1,6 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+    <h1 class="display-3">{% trans from "messages" %}Register{%endtrans %}</h1>
+    </div>
+</div>
+<div class="container">
 
     {% if error %}
         <div class="alert alert-danger" role="alert">
@@ -17,5 +23,5 @@
         {{ form_widget(form) }}
         {{ form_end(form) }}
     {% endif %}
-
+</div>
 {% endblock %}
