--- a/templates/tournament/show.html.twig
+++ b/templates/tournament/show.html.twig
@@ -1,7 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>My Tournaments</h1>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-3">My Tournaments</h1>
+    </div>
+</div>
+<div class="container">
     <table class="table table-striped">
         <thead>
             <tr>
@@ -22,4 +27,5 @@
             {% endfor %}
         </tbody>
     </table>
+</div>
 {% endblock %}
