--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -10,29 +10,29 @@
   {{ form_start(form) }}
   <div class="form-row">
     <div class="col-6">
-      {{ form_row(form.username) }}
+      {{ form_label(form.username) }}
       {{ form_widget(form.username,  {'attr': {'class': 'form-control'}}) }}
   </div>
   </div>
   <div class="form-row">
     <div class="col-6">
-      {{ form_row(form.email) }}
+      {{ form_label(form.username) }}
       {{ form_widget(form.email,  {'attr': {'class': 'form-control'}}) }}
     </div>
   </div>
   <div class="form-row">
     <div class="col-6">
-      {{ form_row(form.plainPassword.first) }}
+      {{ form_label(form.plainPassword.first) }}
       {{ form_widget(form.plainPassword.first,  {'attr': {'class': 'form-control'}}) }}
     </div>
   </div>
   <div class="form-row">
     <div class="col-6">
-      {{ form_row(form.plainPassword.second) }}
+      {{ form_label(form.plainPassword.second) }}
       {{ form_widget(form.plainPassword.second,  {'attr': {'class': 'form-control'}}) }}
     </div>
   </div>
-  <div class="form-row">
+  <div class="form-row text-right">
     <div class="col-6">
       <button type="submit" class="btn btn-primary">Register!</button>
     </div>
