--- a/templates/tournament/create.html.twig
+++ b/templates/tournament/create.html.twig
@@ -29,7 +29,7 @@
     <div class="form-row">
         <div class="col-6">
             {{ form_label(form.date) }}
-            {{ form_widget(form.date,  {'attr': {'type': 'date'}}) }}
+            {{ form_widget(form.date) }}
         </div>
     </div>
     <div class="form-row">
