--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -16,7 +16,7 @@
   </div>
   <div class="form-row">
     <div class="col-6">
-      {{ form_label(form.username) }}
+      {{ form_label(form.email) }}
       {{ form_widget(form.email,  {'attr': {'class': 'form-control'}}) }}
     </div>
   </div>
