--- a/templates/schedule/createSchedule.html.twig
+++ b/templates/schedule/createSchedule.html.twig
@@ -1,9 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
 
+  </div>
+</div>
+<div class="container">
   {{ form_start(form) }}
   {{ form_widget(form) }}
   {{ form_end(form) }}
-
+</div>
 {% endblock %}
