--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,8 +1,11 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <h1>{% trans from "messages" %}Admin Area{% endtrans %}</h1>
-    <hr />
-
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">    
+        <h1 class="display-3">{% trans from "messages" %}Admin Area{% endtrans %}</h1>
+    </div>
+</div>
+<div class="container">
     <h3>{% trans from "messages" %}All active Users{% endtrans %}</h3>
     <table class="table table-striped">
         <thead>
@@ -30,4 +33,5 @@
         {% endfor %}
         </tbody>
     </table>
+</div>
 {% endblock %}
