--- a/templates/admin/show-tournaments.html.twig
+++ b/templates/admin/show-tournaments.html.twig
@@ -1,8 +1,11 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <h1>{% trans from "messages" %}Admin Area{% endtrans %} - {% trans from "messages" %}Tournaments{% endtrans %}</h1>
-    <hr />
-
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-3">{% trans from "messages" %}Admin Area{% endtrans %} - {% trans from "messages" %}Tournaments{% endtrans %}</h1>
+    </div>
+</div>
+<div class="container">
     {% if user == null %}
         <div class="alert alert-danger">{% trans from "messages" %}No user selected!{% endtrans %}</div>
     {% else %}
@@ -11,7 +14,7 @@
             <li><b>{% trans from "messages" %}Username{% endtrans %}:</b> {{ user.username }}</li>
             <li><b>{% trans from "messages" %}Mail{% endtrans %}:</b>  {{ user.email }}</li>
         </ul>
-
+        <br />
         <h3>{% trans from "messages" %}Tournaments{% endtrans %}</h3>
         <table class="table table-striped">
             <thead>
@@ -33,5 +36,6 @@
             {% endfor %}
             </tbody>
         </table>
+</div>
     {% endif %}
 {% endblock %}
