--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,17 +16,10 @@
                 {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                     <ul class="nav navbar-nav">
                         <li class="nav-item"><a class="nav-link {% if app.request.attributes.get('_route') == 'dashboard' %}active{% endif %}" href="{{ path('dashboard') }}">Dashboard</a></li>
-                        <li class="navbar-item">
-                            <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">
-                                Tournament
-                                <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li class="nav-item"><a class="nav-link {% if app.request.attributes.get('_route') == 'tournament_create' %}active{% endif %}" href="{{ path('tournament_create') }}">Create</a></li>
-                                <li class="nav-item"><a class="nav-link {% if app.request.attributes.get('_route') == 'tournament_show' %}active{% endif %}" href="{{ path('tournament_show') }}">Create</a></li>
-                            </ul>
-                        </li>
+                        <li class="nav-item"><a class="nav-link {% if app.request.attributes.get('_route') == 'tournament_show' %}active{% endif %}" href="{{ path('tournament_show') }}">Tournament</a></li>
+                        <li class="nav-item"><a class="nav-link {% if app.request.attributes.get('_route') == 'schedule_show' %}active{% endif %}" href="{{ path('schedule_show') }}">Schedule</a></li>
                         {% if is_granted('ROLE_ADMIN') %}
+                            <li class="nav-item"><a class="nav-link {% if app.request.attributes.get('_route') == 'tournament_create' %}active{% endif %}" href="{{ path('tournament_create') }}">Create</a></li>
                             <li class="nav-item"><a class="nav-link {% if app.request.attributes.get('_route') matches '@admin_.*@' %}active{% endif %}" href="{{ path('admin_index') }}">{% trans from "messages" %}Admin Area{% endtrans %}</a></li>
                         {% endif %}
                         <li class="nav-item"><a class="nav-link" href="{{ path('logout') }}">Logout</a></li>
