--- a/templates/standings/standings.html.twig
+++ b/templates/standings/standings.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <h1 class="display-3">Schedule - {{ tournament.name }}</h1>
+        <h1 class="display-3">Standing - {{ tournament.name }}</h1>
     </div>
 </div>
 <div class="container">
@@ -26,22 +26,28 @@
         <thead>
             <tr>
                 <th>#</th>
-                <th>Date</th>
-                <th>Field</th>
-                <th>Home</th>
-                <th>Away</th>
-                <th>Result</th>
+                <th>Team</th>
+                <th>Played</th>
+                <th>Won</th>
+                <th>Drawn</th>
+                <th>Lost</th>
+                <th>Goals</th>
+                <th>Dif.</th>
+                <th>Points</th>
             </tr>
         </thead>
         <tbody>
-            {% for schedule in scheduleList %}
+            {% for team in standings %}
                 <tr>
                     <th scope="row">{{ loop.index }}</th>
-                    <td>{{ schedule.date|date("d.m.Y H:i") }}</td>
-                    <td>{{ schedule.field }}</td>
-                    <td>{{ schedule.homeTeam.name }}</td>
-                    <td>{{ schedule.awayTeam.name }}</td>
-                    <td>{{schedule.goalHome}}:{{schedule.goalAway}}</td>
+                    <td>{{ team.name }}</td>
+                    <td>{{ team.played }}</td>
+                    <td>{{ team.won }}</td>
+                    <td>{{ team.drawn }}</td>
+                    <td>{{ team.lost }}</td>
+                    <td>{{ team.goalsFor}}:{{team.goalsAgainst }}</td>
+                    <td>{{ team.differenz }}</td>
+                    <td>{{ team.points }}</td>
                 </tr>
             {% endfor %}
         </tbody>
