--- a/templates/tournament/create.html.twig
+++ b/templates/tournament/create.html.twig
@@ -59,7 +59,7 @@
     <div class="form-row">
         <div class="col-6 text-right">
             {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary'}}) }}
-        </divY
+        </div>
     </div>
     {{ form_end(form) }}
 </div>
