--- a/templates/tournament/table.html.twig
+++ b/templates/tournament/table.html.twig
@@ -5,6 +5,9 @@
             <th>Name</th>
             <th>Place</th>
             <th>Date</th>
+            {% if showActive == true %}
+            <th>Active</th>
+            {% endif %}
         </tr>
     </thead>
     <tbody>
@@ -14,6 +17,9 @@
                 <td>{{ tournament.name }}</td>
                 <td>{{ tournament.place }}</td>
                 <td>{{ tournament.date|date("d.m.y") }}</td>
+                {% if showActive == true %}
+                    <td>{% if tournament.isactive == true %}{% trans from 'messages' %}True{% endtrans %}{% else %}{% trans from 'messages' %}False{% endtrans %}{% endif %}</td>
+                {% endif %}
             </tr>
         {% endfor %}
     </tbody>
