--- a/templates/standings/standings.html.twig
+++ b/templates/standings/standings.html.twig
@@ -26,14 +26,14 @@
         <thead>
             <tr>
                 <th>#</th>
-                <th>Team</th>
-                <th>Played</th>
-                <th>Won</th>
-                <th>Drawn</th>
-                <th>Lost</th>
-                <th>Goals</th>
-                <th>Dif.</th>
-                <th>Points</th>
+                <th>{% trans from "messages" %}Team{% endtrans %}</th>
+                <th>{% trans from "messages" %}Played{% endtrans %}</th>
+                <th>{% trans from "messages" %}Won{% endtrans %}</th>
+                <th>{% trans from "messages" %}Drawn{% endtrans %}</th>
+                <th>{% trans from "messages" %}Lost{% endtrans %}</th>
+                <th>{% trans from "messages" %}Goals{% endtrans %}</th>
+                <th>{% trans from "messages" %}Dif.{% endtrans %}</th>
+                <th>{% trans from "messages" %}Points{% endtrans %}</th>
             </tr>
         </thead>
         <tbody>
