--- a/templates/index/dashboard.html.twig
+++ b/templates/index/dashboard.html.twig
@@ -14,6 +14,10 @@
         {% endif %}
         <br />
         <h2>{% trans from "messages" %}My planned Tournaments{% endtrans %}</h2>
-        {% include 'tournament/table.html.twig' with {'tournamentList': planedTournaments, 'showActive': false} %}
+        {% if planedTournaments == [] %}
+            <div class="alert alert-info">{% trans from "messages" %}You haven't created any tournaments yet!{% endtrans %}</div>
+        {% else %}
+            {% include 'tournament/table.html.twig' with {'tournamentList': planedTournaments, 'showActive': false} %}
+        {% endif %}
     </div>
 {% endblock %}
