--- a/templates/standings/standings.html.twig
+++ b/templates/standings/standings.html.twig
@@ -37,17 +37,17 @@
             </tr>
         </thead>
         <tbody>
-            {% for team in standings %}
+            {% for standing in standings %}
                 <tr>
                     <th scope="row">{{ loop.index }}</th>
-                    <td>{{ team.name }}</td>
-                    <td>{{ team.played }}</td>
-                    <td>{{ team.won }}</td>
-                    <td>{{ team.drawn }}</td>
-                    <td>{{ team.lost }}</td>
-                    <td>{{ team.goalsFor}}:{{team.goalsAgainst }}</td>
-                    <td>{{ team.differenz }}</td>
-                    <td>{{ team.points }}</td>
+                    <td>{{ standing.team.name }}</td>
+                    <td>{{ standing.played }}</td>
+                    <td>{{ standing.won }}</td>
+                    <td>{{ standing.drawn }}</td>
+                    <td>{{ standing.lost }}</td>
+                    <td>{{ standing.goalsFor}}:{{ standing.goalsAgainst }}</td>
+                    <td>{{ standing.diff }}</td>
+                    <td>{{ standing.points }}</td>
                 </tr>
             {% endfor %}
         </tbody>
