fix registration controller

--- a/templates/registration/public-team-register-msg.html.twig
+++ b/templates/registration/public-team-register-msg.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<div class="jumbotron jumbotron-fluid>
+<div class="jumbotron jumbotron-fluid">
     <div class="container">
-    <h1 class="display-3">{% trans from "messages" %}Register{%endtrans %}</h1>
+        <h1 class="display-3">{% trans from "messages" %}Register your tournament{%endtrans %}</h1>
     </div>
 </div>
 <div class="container">
