--- a/templates/schedule/msg-error.html.twig
+++ b/templates/schedule/msg-error.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <h1 class="display-3">{% trans from "messages" %}Schedule{% endtrans %} - {{ tournament.name }}</h1>
+        <h1 class="display-3">{% trans from "messages" %}Schedule{% endtrans %}{% if tournament != null %} - {{ tournament.name }}{% endif %}</h1>
     </div>
 </div>
 <div class="container">
