add modal for copy link

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,7 +45,7 @@
             </footer>
         </div>
         {% block javascripts %}
-            {# <script src="{{ asset('js/main.js') }}"></script> #}
+            <script src="{{ asset('build/js/global.js') }}"></script>
         {% endblock %}
     </body>
 </html>
