--- a/templates/index/dashboard.html.twig
+++ b/templates/index/dashboard.html.twig
@@ -43,4 +43,51 @@
             </div>
         </div>
     </div>
+    <div data-ajax-url="{{ absolute_url(path('ajax_result')) }}"/>
+    <div class="modal fade" id="copyLinkModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">{% trans from "messages" %}Clipboard{% endtrans %}</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <input id="clipboardInputField" value="">
+                    <!-- Trigger -->
+                    <!-- <div class="oi oi-clipboard" data-clipboard-target="#clipboardInputField">
+                    </div> -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="resultChangedModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">{% trans from "messages" %}Result Changed{% endtrans %}</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p><span style="font-weight: bold;">{% trans from "messages" %}Tournament{% endtrans %}</span>: <span id="tournamentTeamResult"></span></p>
+                    <p style="height: 15px">{% trans from "messages" %}Result{% endtrans %}:<br />
+                        <span id="homeTeam"></span> <span id="homeTeamResult"></span>  <b>:</b>  <span id="awayTeamResult"></span> <span id="awayTeam"></span>
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">{% trans from "messages" %}Close{% endtrans %}</button>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+{% block javascripts %}
+    <!--<script src="{{ asset('build/js/global.js') }}"></script> -->
+    <script src="{{ asset('build/js/dashboard.js') }}"></script>
 {% endblock %}
