--- a/templates/standings/standings.html.twig
+++ b/templates/standings/standings.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <h1 class="display-3">Standing - {{ tournament.name }}</h1>
+        <h1 class="display-3">{% trans from "messages" %}Standing{% endtrans %} - {{ tournament.name }}</h1>
     </div>
 </div>
 <div class="container">
