change view and add clipboard

--- a/templates/index/dashboard.html.twig
+++ b/templates/index/dashboard.html.twig
@@ -56,8 +56,9 @@
                 <div class="modal-body">
                     <input id="clipboardInputField" value="">
                     <!-- Trigger -->
-                    <!-- <div class="oi oi-clipboard" data-clipboard-target="#clipboardInputField">
-                    </div> -->
+                    <button class="btn id-clipboard" data-clipboard-target="#clipboardInputField">
+                        <span class="oi oi-clipboard"></span>
+                    </button>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
